--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "type": "module",
   "name": "todo_app_graphql",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "config.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon --ext . src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
+    "apollo-server-express": "^3.6.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
